# stm32_modbus

./: Cargo.toml
.cargo/: config.toml
src/: main.rs  modbus.rs  modbus_regs.rs
