[package]
name = "stm32_modbus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ssd1306 = "0.7.1"
embedded-hal = "0.2"
nb = "1"
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"]}
cortex-m-rt = { version = "0.7.1", features = ["device"] }
defmt = "0.3"
defmt-rtt =  { version = "0.4" }
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
embedded-graphics = "0.7.1"
w5500-dhcp = { version = "0.4", features = ["embedded-hal", "defmt"] }
w5500-mqtt = { version = "0.1", features = ["embedded-hal", "defmt"] }
cortex-m-rtic = { version = "1.0", default-features = false }
systick-monotonic = "1.0.1"
log = { version = "0.4", features = ["release_max_level_trace"] }
heapless = { version = "0.7.16", features = ["defmt" , "defmt-impl"] }
rmodbus = { version = "0.7.3", default-features = false, features = ["heapless"] }
fixedvec = "0.2.4"

[dependencies.stm32f4xx-hal]
version = "0.15.0"
features = ["stm32f411"] # replace the model of your microcontroller here
                         # and add other required features

[profile.dev]
incremental = false
codegen-units = 1
debug = true

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
# NOTE disabled to work around issue rust-lang/rust#90357
# the bug results in log messages not having location information
# (the line printed below the log message that contains the file-line location)
# lto = 'fat'
opt-level = 3
overflow-checks = true
